nuevo paquete agregado

--- a/proyecto1/probando/probando.csproj
+++ b/proyecto1/probando/probando.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference IncLude="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+
 </Project>
